...
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="해리 포터와 마법사의 돌" />

        <TextView
...
            app:layout_constraintBottom_toBottomOf="@id/text_price"
            app:layout_constraintStart_toEndOf="@id/text_price"
            app:layout_constraintTop_toTopOf="@+id/text_price"
            android:text="@string/price_unit" />

        <Button
            android:id="@+id/btn_reserve"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/button_check_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:enabled="false"
...
